--- a/tss.css
+++ b/tss.css
@@ -1,6 +1,6 @@
 /* SLIMBOX */
 
-#lbOverlay {
+#tssOverlay {
 	position: fixed;
 	z-index: 9999;
 	left: 0;
@@ -11,18 +11,18 @@
 	cursor: pointer;
 }
 
-#lbCenter, #lbBottomContainer {
+#tssCenter, #tssBottomContainer {
 	position: absolute;
 	z-index: 9999;
 	overflow: hidden;
 	background-color: #fff;
 }
 
-.lbLoading {
+.tssLoading {
 	background: #fff url(loading.gif) no-repeat center;
 }
 
-#lbImage {
+#tssImage {
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -30,13 +30,13 @@
 	background-repeat: no-repeat;
 }
 
-#lbSlide{
+#tssSlide{
 	display: block;
 	position: absolute;
 	width: 100%;
 }
 
-#lbPrevLink, #lbNextLink , #lbPrevLinkAuto, #lbNextLinkAuto {
+#tssPrevLink, #tssNextLink , #tssPrevLinkAuto, #tssNextLinkAuto {
 	display: block;
 	position: absolute;
 	top: 0;
@@ -44,30 +44,30 @@
 	outline: none;
 }
 
-#lbPrevLinkAuto, #lbNextLinkAuto {
+#tssPrevLinkAuto, #tssNextLinkAuto {
 	font-size: 100000px;  /* Workaround needed for IE */
 	overflow: hidden;     /* Workaround needed for IE */
 	color: #666;
 }
 
-#lbPrevLink, #lbPrevLinkAuto {
+#tssPrevLink, #tssPrevLinkAuto {
 	left: 0;
 }
 
-#lbPrevLink:hover, #lbPrevLinkAuto:hover {
+#tssPrevLink:hover, #tssPrevLinkAuto:hover {
 	background: transparent url(prevlabel.gif) no-repeat 0 15%;
 }
 
-#lbNextLink, #lbNextLinkAuto {
+#tssNextLink, #tssNextLinkAuto {
 	width: 100%;
 	right: 0;
 }
 
-#lbNextLink:hover, #lbNextLinkAuto:hover {
+#tssNextLink:hover, #tssNextLinkAuto:hover {
 	background: transparent url(nextlabel.gif) no-repeat 100% 15%;
 }
 
-#lbBottom {
+#tssBottom {
 	font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
 	font-size: 10px;
 	color: #666;
@@ -77,7 +77,7 @@
 	border-top-style: none;
 }
 
-#lbCloseLink {
+#tssCloseLink {
 	display: block;
 	float: right;
 	width: 66px;
@@ -87,10 +87,10 @@
 	outline: none;
 }
 
-#lbCaption, #lbNumber {
+#tssCaption, #tssNumber {
 	margin-right: 71px;
 }
 
-#lbCaption {
+#tssCaption {
 	font-weight: bold;
 }
