git-svn-id: https://plugins.svn.wordpress.org/slimbox-2-slideshow/trunk@463361 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/tss.css
+++ b/tss.css
@@ -48,6 +48,7 @@
 	font-size: 100000px;  /* Workaround needed for IE */
 	overflow: hidden;     /* Workaround needed for IE */
 	color: #666;
+	line-height: 9999px;
 }
 
 #tssPrevLink, #tssPrevLinkAuto {
